# asteroids

./: README.md
asteroids_c/: .clangd  Makefile  README.md  main.c
asteroids_rust/: Cargo.toml  README.md
asteroids_rust/src/: main.rs  math.rs
asteroids_v/: .gitignore  v.mod
