[package]
name = "asteroids_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framebrush = { git = "https://github.com/serd223/framebrush.git", rev = "ac702975e90afd7cad565dd8e87db553be5195c6"}
rand = "0.8.5"
softbuffer = "0.3.0"
winit = "0.28.6"
